# pg-bulk-loader

./: .pre-commit-config.yaml  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  test-requirements.txt
.github/workflows/: codeql.yml  pre-commit.yml  publish_package.yml  unit_test_execution.yml
src/batch/: batch_insert.py  batch_insert_wrapper.py  fast_load_hack.py  pg_connection_detail.py
src/pg_bulk_loader/: __init__.py
src/pg_bulk_loader/batch/: batch_insert.py  batch_insert_wrapper.py  fast_load_hack.py  pg_connection_detail.py
src/pg_bulk_loader/utils/: constants.py  time_it_decorator.py
src/utils/: dataframe_utils.py
tests/unit/: aopd-1k.csv  pg_helper.py  test_batch_insert.py  test_batch_insert_multi_process_wrapper.py  test_batch_insert_wrapper.py  test_dataframe_utils.py
